--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ body {
   display: flex;
   align-items: stretch;
   justify-content: space-between;
+  font-size: 1.5em;
 }
 
 .info {
@@ -30,7 +31,6 @@ body {
   width: 20%;
   padding: 2% 0;
   text-align: left;
-  font-size: 2rem;
   font-weight: 500;
   transition: all 0.5s;
 }
@@ -46,7 +46,6 @@ body {
 .counter {
   padding: 2% 0;
   text-align: right;
-  font-size: 2rem;
   font-weight: 500;
   color: #eee;
 }
@@ -88,16 +87,65 @@ body {
 }
 
 @media (max-width: 600px) {
+  body {
+    font-size: 16px;
+  }
+
   .container {
     flex-direction: column;
   }
 
   .question {
-    width: 85%;
+    width: 90%;
+    padding: 5%;
   }
 
   .answer {
     width: 90%;
+    padding: 5%;
     overflow: hidden;
   }
+}
+
+.score {
+  font-size: 3em;
+  color: white;
+}
+
+h2 {
+  color: rgb(41, 61, 78);
+}
+
+.category-chooser {
+  flex-grow: 0.7;
+  appearance: none;
+  text-indent: 5%;
+  padding: 10px;
+  font-size: 1.5em;
+  border-radius: 10px;
+  background:  #7bdaff;
+  box-shadow: 0px 0px 10px rgb(17, 63, 100);
+  transition: background 0.5s;
+}
+
+.category-chooser:after{
+  width: 0; 
+  height: 0; 
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #f00;
+  position: absolute;
+  top: 40%;
+  right: 5px;
+  content: "";
+  z-index: 98;
+}
+
+.category-chooser:hover {
+  background:  #bdecff;
+  box-shadow: 0px 0px 20px rgb(17, 63, 100);
+}
+
+.category-chooser:focus {
+  outline: none;
 }
