--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,93 @@
+:root {
+  --bg-default: rgb(53,191,187);
+  --bg-gradient: linear-gradient(180deg, rgba(53,191,187,1) 0%, rgba(191,249,240,1) 100%);
+  --dark-primary: #1F6462;
+  --dark-text-shadow: #2F8E8B;
+  --input-fill: #BFFBF9;
+}
+
 body {
   display:flex;
   flex-direction:column; 
   justify-content:center;
   min-height:100vh;
   font-size: 20px;
-  background: steelblue;
-  transition: background 1s;
+  background: var(--bg-default);
+  background: var(--bg-gradient);
+  color: var(--dark-primary);
 }
 
 .container {
   width: 90%;
-  max-width: 1000px;
+  height: 80vh;
+  max-width: 360px;
   margin: 0 auto;
   display: flex;
+  flex-direction: column;
   align-items: stretch;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+
+.bg-text {
+  font-size: 10em;
+  color: #02646121;
+  position: fixed;
+  margin: 0;
+  top: 500px;
+  left: 50vw;
+  z-index: -10;
+  text-transform: uppercase;
+  font-weight: 700;
+  transform: translateX(-50%) translateY(-50%) rotate(-60deg);
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  flex-grow: 1;
+}
+
+.app-title {
+  align-self: flex-start;
+  justify-self: flex-start;
+  font-size: 4em;
+  margin: -0.2em;
+  text-transform: uppercase;
+  text-align: center;
+  -webkit-text-shadow: 0px 0px 10px var(--dark-text-shadow);
+  -moz-text-shadow: 0px 0px 10px var(--dark-text-shadow);
+  text-shadow: 0px 0px 10px var(--dark-text-shadow);
+}
+
+.app-subtitle {
+  margin: 0;
+  font-size: 2em;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: right;
+  -webkit-text-shadow: 0px 0px 10px var(--dark-text-shadow);
+  -moz-text-shadow: 0px 0px 10px var(--dark-text-shadow);
+  text-shadow: 0px 0px 10px var(--dark-text-shadow);
+}
+
+input, select, select option {
+  justify-self: self-end;
+  height: 50px;
+  border-radius: 5px;
+  border: 0;
+  background: var(--input-fill);
+  outline: none;
+}
+
+input {
+  text-indent: 15px;
+}
+
+label {
+  flex-shrink: 0.5;
+  justify-self: self-end;
 }
 
 .top {
@@ -117,50 +189,72 @@ h2 {
 }
 
 .category-chooser {
-  flex-grow: 0.7;
-  appearance: none;
-  text-indent: 5%;
-  padding: 10px;
-  font-size: 1.5em;
-  border-radius: 10px;
-  background:  #7bdaff;
-  box-shadow: 0px 0px 10px rgb(17, 63, 100);
-  transition: background 0.5s;
+  cursor: pointer;
+  word-wrap: break-word;
+  line-height: 1em;
+  white-space: normal;
+  outline: 0;
+  -webkit-transform: rotateZ(0);
+  transform: rotateZ(0);
+  min-width: 14em;
+  min-height: 2.71428571em;
+  background: #fff;
+  display: inline-block;
+  padding: .78571429em 2.1em .78571429em 1em;
+  color: rgba(0,0,0,.87);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: 1px solid rgba(34,36,38,.15);
+  border-radius: .28571429rem;
 }
 
-.category-chooser:after{
-  width: 0; 
-  height: 0; 
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-top: 6px solid #f00;
-  position: absolute;
-  top: 40%;
-  right: 5px;
-  content: "";
-  z-index: 98;
-}
-
-.category-chooser:hover {
-  background:  #bdecff;
-  box-shadow: 0px 0px 20px rgb(17, 63, 100);
-}
 
 .category-chooser:focus {
   outline: none;
 }
 
 .new-quiz-button {
+  transition: background 0.5s;
+  justify-self: self-end;
   padding: 20px;
-  background: cadetblue;
   text-transform: uppercase;
   text-align: center;
-  border-radius: 10px;
-  font-weight: 900;
+  font-weight: 700;
+  font-size: 1.2em;
+  letter-spacing: 1px;
+  color: #efefef;
   margin: 20px 0;
   cursor: pointer;
+  border: 0;
+  border-radius: 5px;
+  background: rgb(69,149,162);
+  background: linear-gradient(0deg, rgba(69,149,162,1) 0%, rgba(88,210,207,1) 100%);
+  -webkit-text-shadow: 0px 0px 10px var(--dark-text-shadow);
+  -moz-text-shadow: 0px 0px 10px var(--dark-text-shadow);
+  text-shadow: 0px 0px 10px var(--dark-text-shadow);
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(26,132,121,0.4);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(26,132,121,0.4);
+  box-shadow: 0px 0px 10px 2px rgba(26,132,121,0.4);
+  outline: none;
 }
 
 .new-quiz-button:hover {
-  box-shadow: 0px 0px 5px rgb(17, 63, 100);
+  -webkit-box-shadow: 0px 0px 15px 5px rgba(26,132,121,0.5);
+  -moz-box-shadow: 0px 0px 15px 5px rgba(26,132,121,0.5);
+  box-shadow: 0px 0px 15px 5px rgba(26,132,121,0.5);
+  background: linear-gradient(0deg, rgb(81, 176, 190) 0%, rgb(99, 236, 234) 100%);
+}
+
+.new-quiz-button:active {
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(26,132,121,0.4);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(26,132,121,0.4);
+  box-shadow: 0px 0px 10px 2px rgba(26,132,121,0.4);
+  background: linear-gradient(180deg, rgba(69,149,162,1) 0%, rgba(88,210,207,1) 100%);
+}
+
+.form-group {
+  flex-grow: 0.2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
