--- a/src/quiz/question/Question.css
+++ b/src/quiz/question/Question.css
@@ -1,9 +1,19 @@
+.quiz__container {
+  width: 90%;
+  margin: 0 auto;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
 .question {
-  font-weight: 700;
+  flex-grow: 1;
 }
 
 .answers {
-  flex-grow: 0.2;
+  flex-grow: 0.5;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
